Fix image overflow

--- a/src/templates/blog-page.module.css
+++ b/src/templates/blog-page.module.css
@@ -18,7 +18,7 @@
 
 /* Targeting image in markdown */
 p > img {
-  max-width: 80vw;
+  max-width: 100%;
 }
 h1 > kbd {
   font-size: medium;
